@@ -10,6 +10,7 @@
   Alias /shibboleth-ds/idpselect.js /etc/shibboleth-ds/idpselect.js
   Alias /shibboleth-ds/idpselect.css /etc/shibboleth-ds/idpselect.css
   Alias /shibboleth-ds/index.html /etc/shibboleth-ds/index.html
+  Alias /shibboleth-ds/blank.gif /etc/shibboleth-ds/blank.gif
 
   <IfModule mod_shib.c>
      ShibRequestSetting requireSession false
