@@ -5,11 +5,11 @@ function IdPSelectUIParms(){
     // Adjust the following to fit into your local configuration
     //
     this.alwaysShow = true;          // If true, this will show results as soon as you start typing
-    this.dataSource = 'DiscoFeed';    // Where to get the data from
+    this.dataSource = 'DiscoFeed';   // Where to get the data from
     this.defaultLanguage = 'en';     // Language to use if the browser local doesnt have a bundle
-    this.defaultLogo = 'flyingpiglogo.jpg';
-    this.defaultLogoWidth = 90;
-    this.defaultLogoHeight = 80 ;
+    this.defaultLogo = 'blank.gif';  // Replace with your own logo
+    this.defaultLogoWidth = 1;
+    this.defaultLogoHeight = 1 ;
     this.defaultReturn = null;       // If non null, then the default place to send users who are not
                                      // Approaching via the Discovery Protocol for example
     //this.defaultReturn = "https://example.org/Shibboleth.sso/DS?SAMLDS=1&target=https://example.org/secure";
